Closed Bug 1194558 Opened 10 years ago Closed 10 years ago

correct time conversion for video frame timestamps

Categories

(Core :: Audio/Video: MediaStreamGraph, defect)

41 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla43
Tracking Status
firefox43 --- fixed

People

(Reporter: karlt, Assigned: karlt)

References

Details

Attachments

(1 file)

Perhaps the graph once measured time in discrete milliseconds.
MediaTimeToSeconds() works fine for negative intervals
Attachment #8647840 - Flags: review?(roc)
Timestamp order assertions noticed this bug in various capturestream tests with changes in bug 962719.
Flags: in-testsuite+
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: