bug 1194558 correct time conversion for video frame timestamps r=roc

MediaTimeToSeconds() works fine for negative intervals

--HG--
extra : rebase_source : 8698761e28a54e6bd172a032c62e03b96ac66bfa